# budgie-media-player-applet

./: .gitignore  README.md  budgie-media-player-applet.plugin  budgie-media-player-applet.plugin.in  meson.build  meson_options.txt  meson_post_install.py
icons/: README.md  meson.build  notices.md
schema/: com.github.zalesyc.budgie-media-player-applet.gschema.xml
src/: AlbumCoverData.py  BudgieApiVersions.py  BudgieApiVersions.py.in  BudgieMediaPlayer.py  EnumsStructs.py  FixedSizeBin.py  Labels.py  PanelControlView.py  Popover.py  PopupPlasmaControlView.py  PopupStyle.py  SettingsPage.py  SingleAppPlayer.py  applet.py  meson.build  mprisWrapper.py  testWin.py
