hicolor_symbolic_actions = join_paths(HICOLOR_THEME_DIR, 'symbolic', 'actions')

install_data(
    'budgie-media-player-applet-pinned-symbolic.svg',
    'budgie-media-player-applet-unpinned-symbolic.svg',
    'budgie-media-player-applet-arrow-drop-down-symbolic.svg',
    install_dir: PIXMAPS_DIR
)

install_data(
    'media-playback-pause-symbolic.svg',
    'media-playback-start-symbolic.svg',
    'media-skip-backward-symbolic.svg',
    'media-skip-forward-symbolic.svg',
    'multimedia-player-symbolic.svg',
    'go-up-symbolic.svg',
    'go-down-symbolic.svg',
    'go-next-symbolic.svg',
    'go-previous-symbolic.svg',
    install_dir: hicolor_symbolic_actions
)
